# BraineMemory

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  history.txt  pyproject.toml
scripts/: health_checks.surql  schema_v2.2.surql
src/: __init__.py  config.py  container.py
src/adapters/: __init__.py  embeddings.py  extraction.py  vision.py
src/core/: __init__.py  community.py  conflict.py  fusion.py  recall.py  router.py  user_memory.py
src/db/: __init__.py  client.py  embedding_cache.py  models.py
src/mcp/: __init__.py  lifecycle.py  server.py
src/resources/: __init__.py
src/tools/: __init__.py  memory.py
src/utils/: __init__.py  chunker.py  text.py
tests/: __init__.py  test_chunker.py
